--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  {% seo %}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  <!--[if lt IE 9]>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <![endif]-->
-  {% include head-custom.html %}
+    {% seo %}
+    <!-- No external CSS included -->
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+    {% include head-custom.html %}
 </head>
 <body>
 <div class="wrapper">
-  <header>
-    <!-- Add a div container to wrap the profile name and image -->
-    <div class="profile-container" style="text-align: center;">
-      <h1 style="display: inline-block;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+    <header>
+        <div style="text-align: center;">
+            <!-- Profile Picture -->
+            {% if site.logo %}
+            <img src="{{site.logo | relative_url}}" alt="Logo" style="max-width: 150px; border-radius: 50%; display: block; margin: 0 auto;" />
+            {% endif %}
 
-      {% if site.logo %}
-      <img src="{{ site.logo | relative_url }}" alt="Logo" style="max-width: 200px; border-radius: 50%; display: inline-block; margin-left: 0px;" />
-      {% endif %}
-    </div>
+            <!-- Profile Name -->
+            <h1 style="display: inline-block;"><a href="{{ "/" | absolute_url }}" style="text-decoration: none; color: black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-    <p>{{ site.description | default: site.github.project_tagline }}</p>
+            <!-- Designation and About Me -->
+            <div style="margin-top: 20px; text-align: center;">
+                <h2 style="font-size: 1.5em; margin-bottom: 10px;">{{ site.designation }}</h2> <!-- Add designation in _config.yml -->
+                <p style="font-size: 1.2em; color: #666; margin: 0 auto; width: 60%;">{{ site.description | default: "About Me content" }}</p>
+            </div>
+        </div>
+    </header>
 
-    {% if site.github.is_user_page %}
-    <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-    {% endif %}
+    <section>
+        {{ content }}
+    </section>
 
-    {% if site.show_downloads %}
-    <ul class="downloads">
-      <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-      <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-      <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-    </ul>
-    {% endif %}
-  </header>
-  <section>
-    {{ content }}
-  </section>
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
