--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,11 @@
   <section>
     {{ content }}
   </section>
+
+  <footer>
+    <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
+  </footer>
+
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
