working on alignment issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
       {% if site.logo %}
       <img src="{{ site.logo | relative_url }}" alt="Logo" style="max-width: 200px; border-radius: 50%; display: inline-block; margin-left: 0px;" />
       {% endif %}
+
+      <h1 style="display: inline-block;">Android Developer</h1>
+
     </div>
 
     <p>{{ site.description | default: site.github.project_tagline }}</p>
