working on alignment issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
       {% endif %}
 
       <h2 style="display: inline-block;">Android Developer</h2>
+      <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
 
     </div>
 
@@ -45,9 +46,11 @@
     {{ content }}
   </section>
 
+<!--
   <footer>
     <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
   </footer>
+-->
 
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
