working on alignment issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,10 @@
       <img src="{{ site.logo | relative_url }}" alt="Logo" style="max-width: 200px; border-radius: 50%; display: inline-block; margin-left: 0px;" />
       {% endif %}
 
-      <h2 style="display: inline-block;">Android Developer</h2>
+      <div class="summary-container" style="text-align: center;">
+        <h2 style="display: inline-block;">Android Developer</h2>
+      </div>
+
       <div class="summary-container" style="text-align: start;">
         <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
       </div>
