working on alignment issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
       <img src="{{ site.logo | relative_url }}" alt="Logo" style="max-width: 200px; border-radius: 50%; display: inline-block; margin-left: 0px;" />
       {% endif %}
 
-      <div class="summary-container" style="text-align: center;">
+
+      <div class="designation-container" style="text-align: start;">
         <h2 style="display: inline-block;">Android Developer</h2>
       </div>
 
