--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,9 @@
 
       <h2 style="display: inline-block; margin-top: 10px;">Android Developer</h2>
 
-      <div class="summary-container" style="text-align: start;">
-        <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
-      </div>
-
-
     </div>
+    <p style="display: inline-block; margin-top: 10px;">I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
+
 
     <p>{{ site.description | default: site.github.project_tagline }}</p>
 
