--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h2 style="display: inline-block; margin-top: 10px;">Android Developer</h2>
 
     </div>
-    <p style="display: inline-block; margin-top: 10px;">I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
+    <p style="display: inline-block;">I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
 
 
     <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -47,11 +47,6 @@
     {{ content }}
   </section>
 
-<!--
-  <footer>
-    <p>I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
-  </footer>
--->
 
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
