--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% seo %}
-  <style>
-    .wrapper {
-      max-width: 1200px; /* Adjust as needed */
-      margin: 0 auto; /* Centers the wrapper */
-      padding: 30 30px; /* Adjust left and right padding */
-    }
-    header, section {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   <!--[if lt IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <![endif]-->
@@ -25,7 +15,7 @@
 <body>
 <div class="wrapper">
   <header>
-    <!-- Your header content here -->
+    <!-- Add a div container to wrap the profile name and image -->
     <div class="profile-container" style="text-align: center;">
       <h1 style="display: inline-block;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
@@ -34,8 +24,10 @@
       {% endif %}
 
       <h2 style="display: inline-block; margin-top: 10px;">Android Developer</h2>
+
     </div>
     <p style="display: inline-block;">I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences.</p>
+
 
     <p>{{ site.description | default: site.github.project_tagline }}</p>
 
@@ -54,6 +46,8 @@
   <section>
     {{ content }}
   </section>
+
+
 </div>
 <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
